@@ -2466,7 +2466,25 @@
 							</OnClick>
 						</Scripts>
 					</CheckButton>
-
+					<CheckButton name="$parentShowTTText" inherits="TellMeWhen_CheckTemplate" parentKey="ShowTTText">
+						<Anchors>
+							<Anchor point="TOP" relativeTo="$parentOnlyMine" relativePoint="BOTTOM" x="0" y="4" />
+						</Anchors>
+						<Scripts>
+							<OnLoad>
+								self.text:SetText(TMW.L["ICONMENU_SHOWTTTEXT"])
+								TMW:TT(self, "ICONMENU_SHOWTTTEXT", "ICONMENU_SHOWTTTEXT_DESC")
+								self.text:SetWidth(TELLMEWHEN_COLUMN1WIDTH)
+							</OnLoad>
+							<OnClick>
+								local groupID, iconID = TMW.CI.g, TMW.CI.i
+								if TMW.db then
+									TMW.db.profile.Groups[groupID].Icons[iconID]["ShowTTText"] = not not self:GetChecked()
+									TMW.IE:ScheduleIconUpdate(groupID, iconID)
+								end
+							</OnClick>
+						</Scripts>
+					</CheckButton>
 					<CheckButton name="$parentRangeCheck" inherits="TellMeWhen_CheckTemplate" parentKey="RangeCheck">
 						<Anchors>
 							<Anchor point="TOP" relativeTo="$parentOnlyMine" relativePoint="BOTTOM">
